--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'my-font'; /*a name to be used later*/
+  src: url(./asset/ocean.ttf); /*URL to font*/
+}
+
 .container {
   display: flex;
   min-height: 100vh;
@@ -25,6 +30,21 @@
   padding-left: 2vw;
   padding-right: 10vw;
   margin: 0%;
+}
+
+.logo {
+  background-color: black;
+  opacity: 0.5;
+  font-size: 4rem;
+  font-family: 'my-font';
+  color: whitesmoke;
+  margin-top: 4rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: calc(35vw / 5.5);
+  padding-right: calc(35vw / 5.5);
+  word-wrap: break-word;
+  justify-content: center;
 }
 
 .form {
